correct hero section text alignment

--- a/styles/home.style.desktop.css
+++ b/styles/home.style.desktop.css
@@ -112,7 +112,7 @@
   .hero-image {
     margin-top: 7%;
     width: fit-content;
-    margin-left: -14%;
+    margin-left: -10%;
   }
 
   .hero-image h1 {
